--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
   <section id="contact" class="contact">
     <br><br><br>
     <center> <h1> Contact me </h2> </center>
-    <form id="contact">
+    <form id="contact-form">
      <center> <label for="first"> <b>First name:</b></label> </center>
      <center><input type="text" id="first" name="first" required></center>
      <center> <label for="last"> <b>Last Name:</b></label> </center>
