--- a/contact.html
+++ b/contact.html
@@ -72,9 +72,9 @@
     <br><br><br>
     <center> <h1> Contact me </h2> </center>
     <form id="contact-form">
-     <center> <label for="first"> <b>First name:</b></label> </center>
-     <center><input type="text" id="first" name="first" required></center>
-     <center> <label for="last"> <b>Last Name:</b></label> </center>
+     
+     
+     <center> <label for="name"> <b>Name:</b></label> </center>
      <center><input type="text" id="last" name="last" required></center>
      <center> <label for="email"> <b>Email adress:</b></label> </center>
      <center><input type="text" id="email" name="email" required></center>
