--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
     <form id="contact-form">
      
      
-     <center> <label for="name"> <b>Name:</b></label> </center>
+     <center> <label for="last"> <b>Name:</b></label> </center>
      <center><input type="text" id="last" name="last" required></center>
      <center> <label for="email"> <b>Email adress:</b></label> </center>
      <center><input type="text" id="email" name="email" required></center>
