Updated with Population Chart project, added navigation and added more text to subpages

--- a/examples.html
+++ b/examples.html
@@ -3,7 +3,7 @@
   <head>
      <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> Welcome to my webpage! </title>
+    <title> My Portfolio Page </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
 
@@ -34,7 +34,7 @@
                 <a class="nav-link" aria-current="page" href="purpose.html">Purpose</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="examples.html">Examples</a>
+                <a class="nav-link" href="examples.html">My Portfolio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact</a>
@@ -63,20 +63,24 @@
  
 
   <section id="examples" class="examples">
-    <h3>What I've learned</h3>
-    <p class="text"> Here are some examples of tags I've learning during this programme: </p>
-    <ul class="text">
-      <li> <b>p </b>tag - creates new paragraph</li><br>
-      <li><b> img </b>tag - loads an image you chose </li><br>
-      <li><b> a </b>tag - adds a link both local (relative) or out of your page (absolute) </li><br>
-      <li><b> table </b> tag - creates a table</li>
-    </ul>
-  <p class="text"> The list goes on further, of course. You can see a favicon next to my page URL. It was created by using <b>link</b> tag, so my page can be one of the kind and is associated with this picture. It's like a logo to my page. </p>
-  <p class="text"> The most exciting thing I learned so far is being able to embed into my website things like YouTube videos (which I did up higher using <b> iframe </b> tag) or even Google Maps! </p>
-  <p class="text"> Apart from HTML I learned a lot about CSS so far! In fact, my webpage is decorated using this language! </p>
-  <p class="text"> Down below I left some space for you to leave some information about you, so I can reach out if you want to know more or would like to contact me for some kind of cooperation. I did it using <b> form </b> tag with <b> get </b> method, which is very helpful aswell!</p>
-  <hr>
+    <h3>As a participant in Correlation One Software Development Course, I have gained a solid foundation in web development skills, including HTML, CSS styling, and intermediate-level JavaScript.</h3>
+
+    <p class="text">With my HTML skills, I am able to create structured and semantic web pages that are accessible and easy to navigate. 
+    I have learned how to use HTML tags to create headings, paragraphs, lists, tables, forms, and other elements necessary for building web pages. 
+    I also have an understanding of HTML5 features, such as new semantic tags, multimedia elements, and APIs, that can enhance the functionality and interactivity of web pages.</p>
+
+    <p class="text">My CSS styling skills have allowed me to bring life and personality to my web pages through design and layout. 
+    I have learned how to use CSS to customize fonts, colors, backgrounds, borders, and other visual properties of web page elements. 
+    I am familiar with CSS box model, selectors, specificity, and cascading principles, which enable me to write efficient and maintainable CSS code. 
+    I have also explored CSS frameworks like Bootstrap, which provide pre-built styles and components for rapid prototyping and responsive design.</p>
+
+    <p class="text">In addition, I have gained intermediate-level skills in JavaScript, which enables me to add interactivity and behavior to my web pages. 
+    I have learned how to use JavaScript to manipulate the DOM, handle events, validate forms, create animations, and interact with APIs. 
+    I am familiar with JavaScript syntax, data types, control structures, functions, objects, and arrays, which are essential building blocks for writing dynamic and scalable web applications.</p>
 </section>
+    <br><br>
+    <center><p class="text"> Here are some of my projects:</p></center>
+    <a href="./population-chart/population-chart.html" class="button">Population Bar Chart</a>
     
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 <script src="js/examples-script.js"></script>
