--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <a class="nav-link" aria-current="page" href="purpose.html">Purpose</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="examples.html">Examples</a>
+            <a class="nav-link" href="examples.html">My Portfolio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
