--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
   <head>
      <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> Welcome to my webpage! </title>
+    <title> Contact Page </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
 
@@ -41,7 +41,7 @@
                 <a class="nav-link" aria-current="page" href="purpose.html">Purpose</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="examples.html">Examples</a>
+                <a class="nav-link" href="examples.html">My Portfolio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact</a>
