Added List Sorter and Interactive Map projects

--- a/examples.html
+++ b/examples.html
@@ -82,6 +82,7 @@
     <center><p class="text"> Here are some of my projects:</p></center>
     <a href="./population-chart/population-chart.html" class="button">Population Bar Chart</a>
     <a href="./list-sorter/list-sorter.html" class="button">Alphabetical Word List Sorter</a>
+    <a href="./interactive-map/interactive-map.html" class="button">Interactive Map</a>
     
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 <script src="js/examples-script.js"></script>
